# ZeroErr

./: .gitignore  CMakeLists.txt  README.md  README_Chinese.md
my_Demo/: CMakeLists.txt  Demo_test.c  Ethercat_control.cpp  Ethercat_control.hpp  main.cpp
soem/: ethercatmain.c
